feat: ui-changes

--- a/deadco-setlist-game/styles/globals.css
+++ b/deadco-setlist-game/styles/globals.css
@@ -83,6 +83,11 @@ html {
   padding-bottom: 0.5rem;
 }
 
+.padding-between {
+  padding-top: 8rem;
+  padding-bottom: 0.5rem;
+}
+
 .countdown-inner {
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
@@ -92,6 +97,17 @@ html {
   padding-left: 0.5rem;
 }
 
+.font-cartoon {
+  font-family: 'Fredoka One', cursive;
+}
+
+.shadow-cartoon {
+  box-shadow: 4px 4px 0px #000;
+}
+
+.shadow-inner-cartoon {
+  box-shadow: inset 2px 2px 0px #000;
+}
 
 .glass-dark {
   background: rgba(0, 0, 0, 0.05);
@@ -200,6 +216,22 @@ select:focus {
   text-decoration: none;
 }
 
+.link-button {
+  display: inline-block;
+  color: #fff;
+  padding: 4px 10px;
+  font-weight: bold;
+  font-size: 12px;
+  text-decoration: underline;
+  transition: color 0.3s;
+}
+
+.link-button:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
+
 .subtitle-font {
   display: inline-block;
   color: #000;
@@ -214,6 +246,20 @@ select:focus {
 .logo-text {
   font-family: 'Luckiest Guy', cursive;
   font-size: 80px;
+  line-height: 1;
+  color: #e1a811;
+  text-shadow:
+    -3px -3px 0 #1A2D5A,
+    3px -3px 0 #1A2D5A,
+    -3px 3px 0 #1A2D5A,
+    3px 3px 0 #1A2D5A;
+  text-align: center;
+}
+
+
+.logo-small-text {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 50px;
   line-height: 1;
   color: #e1a811;
   text-shadow:
@@ -263,19 +309,36 @@ select:focus {
   font-family: var(--font-body);
 }
 
+.game-card {
+  display: inline-block;
+    background-color: #e1a811;
+    color: #000;
+    border: 4px solid #000;
+    padding: 6px 28px;
+    font-weight: 900;
+    padding-bottom: 20px;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-align: center;
+    border-radius: 12px;
+    text-decoration: none;
+    letter-spacing: 0.5px;
+    font-family: var(--font-body);
+    max-width: 600px;
+    margin-bottom: 10px;
+}
 
-
+.game-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 4px 4px 0 #000;
+  background-color: #ffcc00;
+}
 
 .center-wrapper {
   justify-content: center;
   align-items: center;
 }
 
-
-
-
-
-/* Utility classes */
 .animate-pulse-deadco {
   animation: pulse-deadco 2s infinite;
 }
